* Add database timeout parameter on RPC calls
* Support limit and offset to ModelSQL count search and search_count
* Add estimation count to ModelStorage
* Deduplicate entries in domain inversion's simplify
* Don't return cached preferences, try to enrich it with the transaction context
* Use UNION for 'Or'-ed domain with subqueries
* Use global cache for Function fields in readonly transactions
* Add option to strip leading and trailing whitespace from fields.Char

Version 6.0.18 - 2022-04-23
* Bug fixes (see mercurial logs for details)

Version 6.0.17 - 2022-04-15
* Bug fixes (see mercurial logs for details)
* Add support for werkzeug 2.0

Version 6.0.16 - 2022-03-01
* Bug fixes (see mercurial logs for details)
* Do not resolve entities by default with lxml (issue11219)
* Use defusedxml to parse XML (issue11244)

Version 6.0.15 - 2022-02-16
* Bug fixes (see mercurial logs for details)

Version 6.0.14 - 2022-02-01
* Bug fixes (see mercurial logs for details)

Version 6.0.13 - 2022-01-01
* Bug fixes (see mercurial logs for details)

Version 6.0.12 - 2021-12-03
* Bug fixes (see mercurial logs for details)

Version 6.0.11 - 2021-11-20
* Bug fixes (see mercurial logs for details)

Version 6.0.10 - 2021-11-04
* Bug fixes (see mercurial logs for details)

Version 6.0.9 - 2021-10-15
* Bug fixes (see mercurial logs for details)

Version 6.0.8 - 2021-10-01
* Bug fixes (see mercurial logs for details)

Version 6.0.7 - 2021-09-16
* Bug fixes (see mercurial logs for details)

Version 6.0.6 - 2021-09-01
* Bug fixes (see mercurial logs for details)

Version 6.0.5 - 2021-08-05
* Bug fixes (see mercurial logs for details)

Version 6.0.4 - 2021-07-21
* Bug fixes (see mercurial logs for details)

Version 6.0.3 - 2021-07-01
* Bug fixes (see mercurial logs for details)

Version 6.0.2 - 2021-05-15
* Allow column sql types to be tested from the table handler
* Combine search and get_keys in DictSchemaMixin
* Reset less often the user sessions